[package]
name = "netwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
dns-parser = "0.8.0"
env_logger = "0.11.8"
log = "0.4.29"
pnet = "0.35.0"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
